# bbombsbot

./: .gitignore  README.md  pyproject.toml
src/: __main__.py
src/database/: schema.sql
src/extensions/: admin.py  errorhandler.py  misc.py  moderation.py
src/models/: __init__.py  automod.py  bot.py  context.py  database.py  errors.py  ratelimiter.py  views.py
src/sql/: schema.sql
src/static/: __init__.py  const.py  re.py
src/utils/: __init__.py  helpers.py
